[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Scenes/PointsContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Scenes/TimeContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Scenes/HUD_M3.gd" type="Script" id=3]

[node name="HBoxHUD" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxLeftr" type="VBoxContainer" parent="."]
margin_bottom = 600.0

[node name="HBoxTop" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_right = 1020.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsContainer" parent="HBoxTop" instance=ExtResource( 1 )]
margin_left = 772.0
margin_right = 892.0

[node name="TimeContainer" parent="HBoxTop" instance=ExtResource( 2 )]
margin_left = 896.0
margin_right = 1016.0

[node name="VBoxRight" type="VBoxContainer" parent="."]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 600.0
